first working exemple

--- a/sketches/CMakeLists.txt
+++ b/sketches/CMakeLists.txt
@@ -1,11 +1,3 @@
-
-#====================================================================#
-# Step motor test
-#====================================================================#
-generate_avr_firmware(
-	StepMotorTest
-	SRCS StepMotorTest.cpp
-	LIBS SoftSerial BasicIO AvrTL
-	ALL_BOARDS
-	)
+generate_avr_firmware(avrtl_blink SRCS avrtl_blink.cpp LIBS AvrTL BOARDS nano)
+generate_avr_firmware(StepMotorTest SRCS StepMotorTest.cpp LIBS SoftSerial BasicIO AvrTL ALL_BOARDS)
 
