PCD8544 works fine

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory(BasicIO)
 
 #add_subdirectory(RFSniffer)
 #add_subdirectory(Linkuino)
-#add_subdirectory(PCD8544)
+add_subdirectory(PCD8544)
 #add_subdirectory(DS1302)
 #add_subdirectory(WireI2C)
 #add_subdirectory(uRTCLib)
