acrtivated serial to PCD8544 project

--- a/libraries/HWSerialNoInt/CMakeLists.txt
+++ b/libraries/HWSerialNoInt/CMakeLists.txt
@@ -1,9 +1,4 @@
 #====================================================================#
 # ATmega328 USART0 low level interface. no interrupts.
 #====================================================================#
-generate_arduino_library(
-	HWSerialNoInt
-	SRCS HWSerialNoInt.cpp
-    HDRS HWSerialNoInt.h
-    NO_AUTOLIBS MANUAL
-	)
+generate_avr_library(HWSerialNoInt HDRS HWSerialNoInt.h ALL_BOARDS)
