--- a/libraries/SoftSerial/CMakeLists.txt
+++ b/libraries/SoftSerial/CMakeLists.txt
@@ -2,10 +2,5 @@
 # LCD1602 interface. compatible with ByteStream interface, may be used
 # with a PrintStream
 #====================================================================#
-generate_avr_library(
-  SoftSerial
-    HDRS SoftSerial.h
-    LIBS TimeScheduler AvrTL
-    ALL_BOARDS
-  )
+generate_avr_library(SoftSerial HDRS SoftSerial.h LIBS TimeScheduler AvrTL ALL_BOARDS)
 
