--- a/sketches/CMakeLists.txt
+++ b/sketches/CMakeLists.txt
@@ -1,4 +1,5 @@
 generate_avr_firmware(avrtl_blink SRCS avrtl_blink.cpp LIBS AvrTL BOARDS nano)
 generate_avr_firmware(StepMotorTest SRCS StepMotorTest.cpp LIBS SoftSerial BasicIO AvrTL ALL_BOARDS)
 generate_avr_firmware(TestPCD8544 SRCS TestPCD8544.cpp LIBS PCD8544 AvrTL ALL_BOARDS)
+generate_avr_firmware(SerialToPCD8544 SRCS SerialToPCD8544.cpp LIBS PCD8544 BasicIO AvrTL ALL_BOARDS)
 
